[package]
name = "yavashark"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "A new, experimental, JavaScript/TypeScript engine written in Rust"
license = "MIT"
keywords = ["javascript", "typescript", "rust", "interpreter"]

[workspace]
members = [
    "crates/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "0.40.0"
swc_ecma_parser = "0.152.0"
clap = "4.5.18"
yavashark_interpreter = { path = "crates/yavashark_interpreter" }
yavashark_codegen = { path = "crates/yavashark_codegen" }
yavashark_vm = { path = "crates/yavashark_vm" }
yavashark_env = { path = "crates/yavashark_env"}


[lints]
workspace = true

[workspace.lints.clippy]
panic = "deny"
perf = { level = "deny", priority = -1 }
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
format_push_string = "warn"
infinite_loop = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
expect_used = "warn"
missing_docs_in_private_items = "allow"
cargo_common_metadata = "allow" # should be removed if we release our crates to crates.io
cast_possible_truncation = "allow" # should this be on allow?
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
or_fun_call = "allow"
multiple_crate_versions = "allow" # should this be on allow?
missing_errors_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
unnecessary_wraps = "allow"

