[package]
name = "yavashark"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
description = "A new, experimental, JavaScript/TypeScript engine written in Rust"
license = "MIT"
keywords = ["javascript", "typescript", "rust", "interpreter"]

[workspace]
members = [
    "crates/*",
    "crates/yavashark_bytecode/generator"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = "14.0.2"
swc_ecma_parser = "22.0.3"
yavashark_interpreter = { path = "crates/yavashark_interpreter" }
yavashark_codegen = { path = "crates/yavashark_codegen", optional = true }
yavashark_vm = { path = "crates/yavashark_vm", optional = true }
yavashark_env = { path = "crates/yavashark_env", features = ["out-of-spec-experiments", "gui"]}
yavashark_compiler = { path = "crates/yavashark_compiler", optional = true }
tokio = { version = "1.10.0", features = ["full"] }
swc_ecma_ast = "14.0.0"



[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.73"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.77"
getrandom = { version = "0.2.15", features = ["js", "js-sys"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "4.5.18"
rustyline = { version = "15.0.0", features = ["derive"] }
rustyline-derive = "0.11.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["simple_bytecode"]
vm = ["dep:yavashark_vm", "dep:yavashark_codegen", "dep:yavashark_compiler", "yavashark_interpreter/vm"]
simple_bytecode = ["vm", "yavashark_vm/simple_bytecode", "yavashark_interpreter/simple_bytecode"]


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[lints]
workspace = true

[workspace.lints.clippy]
panic = "deny"
perf = { level = "deny", priority = -1 }
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
format_push_string = "warn"
infinite_loop = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
expect_used = "warn"
missing_docs_in_private_items = "allow"
cargo_common_metadata = "allow" # should be removed if we release our crates to crates.io
cast_possible_truncation = "allow" # should this be on allow?
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
or_fun_call = "allow"
multiple_crate_versions = "allow" # should this be on allow?
missing_errors_doc = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
unnecessary_wraps = "allow"

