[package]
name = "yavashark_bytecode"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_value = { path = "../yavashark_value" }
yavashark_macro = { path = "../yavashark_macro" }
bincode = "2.0.0-rc.3"
num-bigint = "0.4.6"

[lints]
workspace = true
