[package]
name = "yavashark_bytecode_interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_vm = { path = "../yavashark_vm" }
yavashark_codegen = { path = "../yavashark_codegen" }
yavashark_compiler = { path = "../yavashark_compiler" }
yavashark_bytecode = { path = "../yavashark_bytecode" }
swc_ecma_ast = "9.0.0"



[lints]
workspace = true
