[package]
name = "yavashark_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_value = { path = "../yavashark_value" }
yavashark_bytecode = { path = "../yavashark_bytecode" }
swc_ecma_parser = "0.148.1"
swc_ecma_ast = "0.117.3"
swc_common = "0.36.2"
anyhow = "1.0.86"

[lints]
workspace = true
