[package]
name = "yavashark_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_value = { path = "../yavashark_value" }
yavashark_bytecode = { path = "../yavashark_bytecode" }
swc_ecma_parser = "5.0.0"
swc_ecma_ast = "4.0.1"
swc_common = "4.0.1"
anyhow = "1.0.86"
log = "0.4.22"

[lints]
workspace = true
