[package]
name = "yavashark_env"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_value = { path = "../yavashark_value", features = ["js", "dbg_object_gc" , "display_object"], default-features = false }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_macro = { path = "../yavashark_macro" }
colored = "3.0.0"
paste = "1.0.15"
rand = { version = "0.9.0"}
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"
unicode-normalization = "0.1.24"
swc_ecma_ast = "6.1.0"
indexmap = "2.7.1"
chrono = "0.4.40"
base64 = "0.21.7"
half = { version = "2.4.1", features = ["bytemuck", "num-traits"]}
bytemuck = "1.21.0"
hex = "0.4.3"
log = "0.4.25"
tokio = { version = "1.44.1", features = ["sync"] } # tokio is just needed for `Notify` probably we should use another dependency for that
futures = "0.3.31"
pin-project = "1.1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }


[features]
default = []
tests = []
out-of-spec-experiments = ["tokio/time"]

[lints]
workspace = true
