[package]
name = "yavashark_env"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_value = { path = "../yavashark_value", features = ["js", "dbg_object_gc" , "display_object", "temporal_rs"], default-features = false }
yavashark_string = { path = "../yavashark_string"}
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_macro = { path = "../yavashark_macro" }
colored = "3.0.0"
paste = "1.0.15"
rand = { version = "0.9.0"}
num-bigint = "0.4.6"
num-traits = "0.2.19"
regress = "0.10.3"
serde = "1.0.217"
serde_json = "1.0.138"
unicode-normalization = "0.1.24"
swc_ecma_ast = "15.0.0"
indexmap = "2.7.1"
chrono = "0.4.40"
base64 = "0.21.7"
half = { version = "2.4.1", features = ["bytemuck", "num-traits"]}
bytemuck = "1.21.0"
hex = "0.4.3"
log = "0.4.25"
tokio = { version = "1.47.1", default-features = false, features = ["sync"] }
futures = "0.3.31"
pin-project = "1.1.10"
rustc-hash = "2.1.1"
temporal_rs = { version = "0.0.14", features = ["tzdb"] }
egui = { version = "0.31.1", optional = true}
eframe = { version = "0.31.1", optional = true}
egui_extras = { version = "0.31.1", optional = true}
iana-time-zone = "0.1.63"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }


[features]
default = []
tests = []
out-of-spec-experiments = ["tokio/time"]
gui = ["out-of-spec-experiments", "dep:egui", "dep:eframe", "dep:egui_extras"]

[lints]
workspace = true
