[package]
name = "yavashark_garbage"
version = "0.1.0"
edition = "2021"
description = "A garbage collector for the YavaShark JS/TS engine... Maybe it should collect js completely?"

[dependencies]
log = "0.4.21"
rand = "0.9.0-alpha.1"
bitflags = "2.5.0"
lazy_static = { version = "1.4.0", optional = true }
egui = { version = "0.27.2", optional = true }
eframe = { version = "0.27.2", optional = true }
egui_extras = { version = "0.27.2", optional = true }
layout-rs = { version = "0.1.2", optional = true}


[lints]
workspace = true


[dev-dependencies]
env_logger = "0.11.3"


[features]
trace = ["dep:lazy_static", "dep:egui", "dep:eframe", "dep:egui_extras", "dep:layout-rs"]
