[package]
name = "yavashark_garbage"
version = "0.1.0"
edition = "2021"
description = "A garbage collector for the YavaShark JS/TS engine... Maybe it should collect js completely?"

[dependencies]
log = "0.4.21"
rand = "0.9.0-alpha.1"
lazy_static = { version = "1.4.0", optional = true }
parking_lot = "0.12.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui = { version = "0.31.0", optional = true }
eframe = { version = "0.31.0", optional = true }
egui_extras = { version = "0.31.0", optional = true, features = ["svg"] }
layout-rs = { version = "0.1.2", optional = true}
winit = { version = "0.30.8", optional = true, features = ["wayland"] }


[lints]
workspace = true


[dev-dependencies]
env_logger = "0.11.3"

[features]
default = []
trace = ["dep:lazy_static", "dep:egui", "dep:eframe", "dep:egui_extras", "dep:layout-rs", "dep:winit"]
easy_debug = ["dep:lazy_static"]
actual_gc = []
