[package]
name = "yavashark_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "27.0.0"
swc_ecma_ast = "18.0.0"
swc_common = "17.0.1"
yavashark_macro = { path = "../yavashark_macro" }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_env = { path = "../yavashark_env", features = ["tests"] }
yavashark_value = { path = "../yavashark_value" }
yavashark_string = { path = "../yavashark_string" }
yavashark_bytecode_interpreter = { path = "../yavashark_bytecode_interpreter", optional = true }
yavashark_vm = { path = "../yavashark_vm", optional = true }
yavashark_swc_validator = { path = "../yavashark_swc_validator" }
log = "0.4.21"
env_logger = "0.11.3"


[features]
default = []
vm = ["dep:yavashark_vm", "dep:yavashark_bytecode_interpreter"]
simple_bytecode = ["dep:yavashark_bytecode_interpreter", "yavashark_vm/simple_bytecode"]

[lints]
workspace = true