[package]
name = "yavashark_realm"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_string = { path = "../yavashark_string" }
yavashark_garbage = { path = "../yavashark_garbage" }
temporal_rs = { version = "0.0.8", features = ["tzdb"] }
tokio = { version = "1.44.1", features = ["sync"] }
futures = "0.3.31"
pin-project = "1.1.10"
rustc-hash = "2.1.1"
indexmap = "2.7.1"

[lints]
workspace = true