[package]
name = "yavashark_test262"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_macro = { path = "../yavashark_macro" }
yavashark_value = { path = "../yavashark_value", features = ["display_object"] }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_interpreter = { path = "../yavashark_interpreter", features = ["vm", "simple_bytecode"] }
yavashark_string = { path = "../yavashark_string" }
yavashark_vm = { path = "../yavashark_vm" }
tokio = { version = "1.47.1", features = ["rt"]}




swc_common = "14.0.2"
swc_ecma_parser = "22.0.3"
swc_ecma_ast = "14.0.0"
yaml-rust2 = "0.10.0"
bitflags = "2.6.0"



[lints]
#workspace = true # this is test code, so we are fine, not having all clippy lints
