[package]
name = "yavashark_test262"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_macro = { path = "../yavashark_macro" }
yavashark_value = { path = "../yavashark_value", features = ["display_object"] }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_interpreter = { path = "../yavashark_interpreter", features = ["vm", "simple_bytecode"] }
yavashark_string = { path = "../yavashark_string" }
yavashark_vm = { path = "../yavashark_vm" }
yavashark_swc_validator = { path = "../yavashark_swc_validator" }
tokio = { version = "1.47.1", features = ["rt"]}
oxc = { version = "0.89.0", optional = true}

pprof = { version = "0.15.0", features = ["prost-codec"], optional = true }
flate2 = { version = "1.0", optional = true }

swc_common = "17.0.1"
swc_ecma_parser = { version = "27.0.4", features = ["verify"] }
swc_ecma_ast = "18.0.0"
yaml-rust2 = "0.10.0"
bitflags = "2.6.0"



[lints]
#workspace = true # this is test code, so we are fine, not having all clippy lints

[features]
default = []
oxc = ["dep:oxc"]
parser_test = []
pprof = ["dep:pprof", "dep:flate2"]
timings = []
