[package]
name = "yavashark_test262"
version = "0.1.0"
edition = "2024"

[dependencies]
yavashark_env = { path = "../yavashark_env", features = ["temporal", "icu"] }
yavashark_profiler = { path = "../yavashark_profiler", optional = true }
yavashark_macro = { path = "../yavashark_macro" }
yavashark_value = { path = "../yavashark_value", features = ["display_object"] }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_interpreter = { path = "../yavashark_interpreter", features = ["vm", "simple_bytecode"] }
yavashark_string = { path = "../yavashark_string" }
yavashark_vm = { path = "../yavashark_vm" }
yavashark_swc_validator = { path = "../yavashark_swc_validator" }
tokio = { version = "1.47.1", features = ["rt"] }
oxc = { version = "0.129.0", optional = true }
oxc_semantic = { version = "0.129.0", optional = true }

pprof = { version = "0.15.0", features = ["prost-codec"], optional = true }
flate2 = { version = "1.0", optional = true }

swc_common = "21.0.2"
swc_ecma_parser = { version = "39.0.0", features = ["verify"] }
swc_ecma_ast = "23.0.1"
yaml-rust2 = "0.10.0"
bitflags = "2.6.0"



[lints]
#workspace = true # this is test code, so we are fine, not having all clippy lints

[features]
default = []
oxc = ["dep:oxc", "dep:oxc_semantic"]
parser_test = []
pprof = ["dep:pprof", "dep:flate2", "profiler", "yavashark_profiler/pprof"]
profiler = ["dep:yavashark_profiler", "yavashark_env/profiler", "yavashark_interpreter/profiler", "yavashark_vm/profiler"]
timings = []
