[package]
name = "yavashark_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", optional = true }
yavashark_garbage = { path = "../yavashark_garbage" }




[features]
default = []
js = []
ts = []
anyhow = ["dep:anyhow"]
dbg_object_gc = []
obj_trace = ["yavashark_garbage/trace", "yavashark_garbage/easy_debug"]
obj_dbg = ["yavashark_garbage/easy_debug"]
display_object = []


[lints]
workspace = true

