[package]
name = "yavashark_value"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.40", optional = true }
yavashark_garbage = { path = "../yavashark_garbage" }
yavashark_string = { path = "../yavashark_string"}
num-bigint = "0.4.6"
num-traits = "0.2.19"
half = "2.5.0"
rand = "0.9.0"
temporal_rs = { version = "0.0.13", optional = true }
equivalent = "1.0.2"


[features]
default = []
js = []
ts = []
obj_trace = ["yavashark_garbage/trace", "yavashark_garbage/easy_debug"]
anyhow = ["dep:anyhow"]
dbg_object_gc = []
obj_dbg = ["yavashark_garbage/easy_debug"]
display_object = []
temporal_rs = ["dep:temporal_rs"]


[lints]
workspace = true

