[package]
name = "yavashark_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
yavashark_env = { path = "../yavashark_env" }
yavashark_macro = { path = "../yavashark_macro" }
yavashark_value = { path = "../yavashark_value" }
yavashark_string = { path = "../yavashark_string" }
yavashark_bytecode = { path = "../yavashark_bytecode" }
yavashark_garbage = { path = "../yavashark_garbage" }
tokio = { version = "1.47.1", features = ["sync"] }
log = "0.4.25"
swc_ecma_ast = "18.0.0"


[features]
default = []
simple_bytecode = ["yavashark_bytecode/simple_bytecode"]


[lints]
workspace = true
